[project]
name = "hackassembler"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
    "setuptools>=75.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
python_files = ["test_*.py"]
addopts = [
    "--import-mode=importlib",
]
